# 2dx-gsm

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: Build-MSVC.yml  Build-MSYS2-CLANG64.yml
cmake/: 2dx-gsm.2024031300.cmake  2dx-gsm.2024031301.cmake  2dx-gsm.2024040300.cmake  2dx-gsm.2024042400.cmake  2dx-gsm.2024052200.cmake  2dx-gsm.2024080500.cmake  2dx-gsm.2024091800.cmake  2dx-gsm.2024121800.cmake  2dx-gsm.2025021200.cmake  2dx-gsm.2025031200.cmake
src/: api.cc  api.h  bm2dx.cc  bm2dx.h  bm2dx_offsets.cc  bm2dx_offsets.h  code_patch.h  config.cc  config.h  dllmain.cc  hooks.cc  hooks.h  scope_protect.h  version.cc.in  version.h.in
